--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         <!-- HEADER-->
         <header id="header">
             <div class="header header-2 d-none d-lg-block">
-                <div class="header__bar">
+                <div class="header__bar bg-overlay bg-overlay--p85" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
                             <div class="header__content">
                                 <div class="logo">
-                                    <a href="#">
+                                    <a href="index.html">
                                         <img src="./images/logo-1.png" alt="pls-mechanical" />
                                     </a>
                                 </div>
@@ -61,28 +61,28 @@
                                     <div class="header-social">
                                         <ul class="list-social list-social--light">
                                             <li class="list-social__item">
-                                                <a class="ic-fb" href="#">
+                                                <a class="ic-fb" href="https://www.facebook.com/plsmechanicalinc">
                                                     <i class="zmdi zmdi-facebook"></i>
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-insta" href="#">
+                                                <a class="ic-insta" href="https://www.instagram.com/plsmechanical/">
                                                     <i class="zmdi zmdi-instagram"></i>
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-twi" href="#">
+                                                <a class="ic-twi" href="https://twitter.com/PLSMechanical">
                                                     <i class="zmdi zmdi-twitter"></i>
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-pinterest" href="#">
-                                                    <i class="zmdi zmdi-pinterest"></i>
+                                                <a class="ic-youtube" href="https://www.youtube.com/channel/UC1il56Zf79YmRoEidSQl24A">
+                                                    <i class="zmdi zmdi-youtube-play"></i>
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-google" href="#">
-                                                    <i class="zmdi zmdi-google"></i>
+                                                <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                                    <i class="zmdi zmdi-linkedin"></i>
                                                 </a>
                                             </li>
                                         </ul>
@@ -131,28 +131,8 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="menu-item menu-item-has-children">
-                                <a href="#" data-toggle="collapse" data-target="#sub4" aria-expanded="true" aria-controls="sub4">News</a>
-                                <ul class="sub-menu collapse" id="sub4" data-parent="#nav-menu-sidebar">
-                                    <li class="menu-item">
-                                        <a href="blog-grid.html">blog grid</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-sidebar.html">blog with sidebar</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-detail-sidebar.html">blog detail with sidebar</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-detail-img.html">blog detail image</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-detail-gallery.html">blog detail gallery</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-detail-video.html">blog detail video</a>
-                                    </li>
-                                </ul>
+                            <li class="menu-item">
+                                <a href="news.html">News</a>
                             </li>
                             <li class="menu-item">
                                 <a href="contact.html">Contact</a>
@@ -161,28 +141,28 @@
                     </nav>
                     <ul class="list-social list-social--big">
                         <li class="list-social__item">
-                            <a class="ic-fb" href="#">
+                            <a class="ic-fb" href="https://www.facebook.com/plsmechanicalinc">
                                 <i class="zmdi zmdi-facebook"></i>
                             </a>
                         </li>
                         <li class="list-social__item">
-                            <a class="ic-insta" href="#">
+                            <a class="ic-insta" href="https://www.instagram.com/plsmechanical/">
                                 <i class="zmdi zmdi-instagram"></i>
                             </a>
                         </li>
                         <li class="list-social__item">
-                            <a class="ic-twi" href="#">
+                            <a class="ic-twi" href="https://twitter.com/PLSMechanical">
                                 <i class="zmdi zmdi-twitter"></i>
                             </a>
                         </li>
                         <li class="list-social__item">
-                            <a class="ic-pinterest" href="#">
-                                <i class="zmdi zmdi-pinterest"></i>
+                            <a class="ic-youtube" href="https://www.youtube.com/channel/UC1il56Zf79YmRoEidSQl24A">
+                                <i class="zmdi zmdi-youtube-play"></i>
                             </a>
                         </li>
                         <li class="list-social__item">
-                            <a class="ic-google" href="#">
-                                <i class="zmdi zmdi-google"></i>
+                            <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                <i class="zmdi zmdi-linkedin"></i>
                             </a>
                         </li>
                     </ul>
@@ -219,7 +199,7 @@
                                 <a href="about-us.html">About</a>
                             </li>
                             <li class="menu-item menu-item-has-children">
-                                <a href="project-grid-full.html">Services</a>
+                                <a href="#">Services</a>
                                 <ul class="sub-menu">
                                     <li class="menu-item">
                                         <a href="heating.html">Heating</a>
@@ -238,33 +218,8 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="menu-item menu-item-has-children">
-                                <a href="blog-grid.html">News</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item">
-                                        <a href="blog-grid.html">blog grid</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-sidebar.html">blog with sidebar</a>
-                                    </li>
-                                    <li class="menu-item menu-item-has-children">
-                                        <a href="blog-detail-sidebar.html">blog detail with sidebar</a>
-                                        <ul class="sub-menu sub-menu--left">
-                                            <li class="menu-item">
-                                                <a href="blog-detail-sidebar.html">blog detail with sidebar</a>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a href="blog-detail-img.html">blog detail image</a>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a href="blog-detail-gallery.html">blog detail gallery</a>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a href="blog-detail-video.html">blog detail video</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
+                            <li class="menu-item">
+                                <a href="news.html">News</a>
                             </li>
                             <li class="menu-item">
                                 <a href="contact.html">Contact</a>
