--- a/maintenance.html
+++ b/maintenance.html
@@ -10,8 +10,8 @@
     <meta name="keywords" content="Tatee Theme Templates">
 
     <!-- Title Page-->
-    <title>Maintenance</title>
-
+    <title>PLS Mechanical</title>
+    
     <!-- Icons font CSS-->
     <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
     <link href="vendor/font-awesome-5/css/fontawesome-all.min.css" rel="stylesheet" media="all">
@@ -49,7 +49,7 @@
                         <div class="container-fluid">
                             <div class="header__content">
                                 <div class="logo">
-                                    <a href="#">
+                                    <a href="index.html">
                                         <img src="./images/logo-1.png" alt="pls-mechanical" />
                                     </a>
                                 </div>
@@ -58,28 +58,28 @@
                                     <div class="header-social">
                                         <ul class="list-social list-social--light">
                                             <li class="list-social__item">
-                                                <a class="ic-fb" href="#">
+                                                <a class="ic-fb" href="https://www.facebook.com/plsmechanicalinc">
                                                     <i class="zmdi zmdi-facebook"></i>
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-insta" href="#">
+                                                <a class="ic-insta" href="https://www.instagram.com/plsmechanical/">
                                                     <i class="zmdi zmdi-instagram"></i>
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-twi" href="#">
+                                                <a class="ic-twi" href="https://twitter.com/PLSMechanical">
                                                     <i class="zmdi zmdi-twitter"></i>
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-pinterest" href="#">
-                                                    <i class="zmdi zmdi-pinterest"></i>
+                                                <a class="ic-youtube" href="https://www.youtube.com/channel/UC1il56Zf79YmRoEidSQl24A">
+                                                    <i class="zmdi zmdi-youtube-play"></i>
                                                 </a>
                                             </li>
                                             <li class="list-social__item">
-                                                <a class="ic-google" href="#">
-                                                    <i class="zmdi zmdi-google"></i>
+                                                <a class="ic-google" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                                    <i class="zmdi zmdi-linkedin"></i>
                                                 </a>
                                             </li>
                                         </ul>
@@ -112,44 +112,24 @@
                                 <a href="#" data-toggle="collapse" data-target="#sub2" aria-expanded="true" aria-controls="sub2">Services</a>
                                 <ul class="sub-menu collapse" id="sub2" data-parent="#nav-menu-sidebar">
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Heating</a>
+                                        <a href="heating.html">Heating</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Cooling</a>
+                                        <a href="cooling.html">Cooling</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Indoor Air Quality</a>
+                                        <a href="indoor-air-quality.html">Indoor Air Quality</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Maintenance</a>
+                                        <a href="maintenance.html">Maintenance</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide-video-background.html">Commercial</a>
+                                        <a href="commercial.html">Commercial</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li class="menu-item menu-item-has-children">
-                                <a href="#" data-toggle="collapse" data-target="#sub4" aria-expanded="true" aria-controls="sub4">News</a>
-                                <ul class="sub-menu collapse" id="sub4" data-parent="#nav-menu-sidebar">
-                                    <li class="menu-item">
-                                        <a href="blog-grid.html">blog grid</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-sidebar.html">blog with sidebar</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-detail-sidebar.html">blog detail with sidebar</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-detail-img.html">blog detail image</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-detail-gallery.html">blog detail gallery</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-detail-video.html">blog detail video</a>
-                                    </li>
-                                </ul>
+                            <li class="menu-item">
+                                <a href="news.html">News</a>
                             </li>
                             <li class="menu-item">
                                 <a href="contact.html">Contact</a>
@@ -158,28 +138,28 @@
                     </nav>
                     <ul class="list-social list-social--big">
                         <li class="list-social__item">
-                            <a class="ic-fb" href="#">
+                            <a class="ic-fb" href="https://www.facebook.com/plsmechanicalinc">
                                 <i class="zmdi zmdi-facebook"></i>
                             </a>
                         </li>
                         <li class="list-social__item">
-                            <a class="ic-insta" href="#">
+                            <a class="ic-insta" href="https://www.instagram.com/plsmechanical/">
                                 <i class="zmdi zmdi-instagram"></i>
                             </a>
                         </li>
                         <li class="list-social__item">
-                            <a class="ic-twi" href="#">
+                            <a class="ic-twi" href="https://twitter.com/PLSMechanical">
                                 <i class="zmdi zmdi-twitter"></i>
                             </a>
                         </li>
                         <li class="list-social__item">
-                            <a class="ic-pinterest" href="#">
-                                <i class="zmdi zmdi-pinterest"></i>
+                            <a class="ic-youtube" href="https://www.youtube.com/channel/UC1il56Zf79YmRoEidSQl24A">
+                                <i class="zmdi zmdi-youtube-play"></i>
                             </a>
                         </li>
                         <li class="list-social__item">
-                            <a class="ic-google" href="#">
-                                <i class="zmdi zmdi-google"></i>
+                            <a class="ic-linkedin" href="https://www.linkedin.com/company/pls-mechanical-inc/">
+                                <i class="zmdi zmdi-linkedin"></i>
                             </a>
                         </li>
                     </ul>
@@ -200,7 +180,7 @@
                             </a>
                             <button class="hamburger hamburger--slider float-right" type="button">
                                 <span class="hamburger-box">
-                                    <span class="hamburgber-inner"></span>
+                                    <span class="hamburger-inner"></span>
                                 </span>
                             </button>
                         </div>
@@ -216,52 +196,27 @@
                                 <a href="about-us.html">About</a>
                             </li>
                             <li class="menu-item menu-item-has-children">
-                                <a href="project-grid-full.html">Services</a>
+                                <a href="#">Services</a>
                                 <ul class="sub-menu">
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Heating</a>
+                                        <a href="heating.html">Heating</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Cooling</a>
+                                        <a href="cooling.html">Cooling</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Indoor Air Quality</a>
+                                        <a href="indoor-air-quality.html">Indoor Air Quality</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Maintenance</a>
+                                        <a href="maintenance.html">Maintenance</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide-video-background.html">Commercial</a>
+                                        <a href="commercial.html">Commercial</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li class="menu-item menu-item-has-children">
-                                <a href="blog-grid.html">News</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item">
-                                        <a href="blog-grid.html">blog grid</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="blog-sidebar.html">blog with sidebar</a>
-                                    </li>
-                                    <li class="menu-item menu-item-has-children">
-                                        <a href="blog-detail-sidebar.html">blog detail with sidebar</a>
-                                        <ul class="sub-menu sub-menu--left">
-                                            <li class="menu-item">
-                                                <a href="blog-detail-sidebar.html">blog detail with sidebar</a>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a href="blog-detail-img.html">blog detail image</a>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a href="blog-detail-gallery.html">blog detail gallery</a>
-                                            </li>
-                                            <li class="menu-item">
-                                                <a href="blog-detail-video.html">blog detail video</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
+                            <li class="menu-item">
+                                <a href="news.html">News</a>
                             </li>
                             <li class="menu-item">
                                 <a href="contact.html">Contact</a>
@@ -484,7 +439,7 @@
                     <div class="col-lg-1 col-md-1">
                         <div class="footer-col">
                             <div class="widget m-t-10">
-                                <a href="#">
+                                <a href="index.html">
                                     <img src="images/pls_white_logo.png" alt="pls-mechanical" />
                                 </a>
                             </div>
@@ -524,19 +479,19 @@
                                 <h4 class="widget-title">Services</h4>
                                 <ul>
                                     <li>
-                                        <a href="#">Heating</a>
+                                        <a href="heating.html">Heating</a>
                                     </li>
                                     <li>
-                                        <a href="#">Cooling</a>
+                                        <a href="cooling.html">Cooling</a>
+                                </li>
+                                    <li>
+                                        <a href="indoor-air-quality.html">Indoor Air Quality</a>
                                     </li>
                                     <li>
-                                        <a href="#">Indoor Air Quality</a>
+                                        <a href="maintenance.html">Maintenance</a>
                                     </li>
                                     <li>
-                                        <a href="#">Maintenance</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Commercial</a>
+                                        <a href="commercial.html">Commercial</a>
                                     </li>
                                 </ul>
                             </div>
